tests/transpiler/x/java/group_by_left_join.error
exit status 1
Main.java:25: error: <identifier> expected
         o;
          ^
Main.java:26: error: <identifier> expected
        Item3(Data1 c,  o) {
                         ^
2 errors
